==> Thialf/OctoWS2811/OctoWS2811.cpp <==
#include <string.h>
#include "OctoWS2811.h"
#define WS2811_TIMING_T0H  60 //60
#define WS2811_TIMING_T1H  176 //176

void OctoWS2811::begin(char dataport, uint32_t datadirectionregister)
{
	uint32_t bufsize, frequency;

	bufsize = stripLen*24;

	// set up the buffers
	memset(frameBuffer, 0, bufsize);
	if (drawBuffer) {
		memset(drawBuffer, 0, bufsize);
	} else {
		drawBuffer = frameBuffer;
	}
	
	// configure the 8 output pins
  switch(dataport)
  {
    case 'A':
      GPIOA_PCOR |= datadirectionregister;
      if (datadirectionregister & (1<<4))
        pinMode(33, OUTPUT);      // strip #1
      if (datadirectionregister & (1<<5))
        pinMode(24, OUTPUT);      // strip #2
      break;
    case 'B':
      GPIOB_PCOR |= datadirectionregister;
      if (datadirectionregister & (1<<0))
        pinMode(16, OUTPUT);      // strip #1
      if (datadirectionregister & (1<<1))
        pinMode(17, OUTPUT);      // strip #2
      if (datadirectionregister & (1<<2))
        pinMode(19, OUTPUT);      // strip #3
      if (datadirectionregister & (1<<3))
        pinMode(18, OUTPUT);      // strip #4
      break;
    case 'C':
      GPIOC_PCOR |= datadirectionregister;
      if (datadirectionregister & (1<<0))
        pinMode(15, OUTPUT);      // strip #1
      if (datadirectionregister & (1<<1))
        pinMode(22, OUTPUT);      // strip #2
      if (datadirectionregister & (1<<2))
        pinMode(23, OUTPUT);      // strip #3
      if (datadirectionregister & (1<<3))
        pinMode( 9, OUTPUT);      // strip #4
      if (datadirectionregister & (1<<4))
        pinMode(10, OUTPUT);      // strip #5
      if (datadirectionregister & (1<<5))
        pinMode(13, OUTPUT);      // strip #6
      if (datadirectionregister & (1<<6))
        pinMode(11, OUTPUT);      // strip #7
      if (datadirectionregister & (1<<7))
        pinMode(12, OUTPUT);      // strip #8
      break;
    case 'E':
      GPIOE_PCOR |= datadirectionregister; // set outputs low
      if (datadirectionregister & (1<<0))
        pinMode(31, OUTPUT);	// strip #1
      if (datadirectionregister & (1<<1))
        pinMode(26, OUTPUT);	// strip #2
      break;
    default: // default == D
      GPIOD_PCOR |= datadirectionregister; // set outputs low
      if (datadirectionregister & (1<<0))
        pinMode(2, OUTPUT);  // strip #1
      if (datadirectionregister & (1<<1))
        pinMode(14, OUTPUT); // strip #2
      if (datadirectionregister & (1<<2))
        pinMode(7, OUTPUT);  // strip #3
      if (datadirectionregister & (1<<3))
        pinMode(8, OUTPUT);  // strip #4
      if (datadirectionregister & (1<<4))
        pinMode(6, OUTPUT);  // strip #5
      if (datadirectionregister & (1<<5))
        pinMode(20, OUTPUT); // strip #6
      if (datadirectionregister & (1<<6))
        pinMode(21, OUTPUT); // strip #7
      if (datadirectionregister & (1<<7))
        pinMode(5, OUTPUT);  // strip #8
      break;
  }

	// create the two waveforms for WS2811 low and high bits
	frequency = (params & WS2811_400kHz) ? 400000 : 740000;
  setFTM_Timer(WS2811_TIMING_T0H, WS2811_TIMING_T1H, frequency);
	// analogWriteResolution(8);
	// analogWriteFrequency(3, frequency);
	// analogWriteFrequency(4, frequency);
	// analogWrite(3, WS2811_TIMING_T0H);
	// analogWrite(4, WS2811_TIMING_T1H);

	// // pin 16 triggers DMA(port B) on rising edge (configure for pin 3's waveform)
	// CORE_PIN16_CONFIG = PORT_PCR_IRQC(1)|PORT_PCR_MUX(3);
	// pinMode(3, INPUT_PULLUP); // pin 3 no longer needed

	// // pin 15 triggers DMA(port C) on falling edge of low duty waveform
	// // pin 15 and 16 must be connected by the user: 16 is output, 15 is input
	// pinMode(15, INPUT);
	// CORE_PIN15_CONFIG = PORT_PCR_IRQC(2)|PORT_PCR_MUX(1);

	// // pin 4 triggers DMA(port A) on falling edge of high duty waveform
	// CORE_PIN4_CONFIG = PORT_PCR_IRQC(2)|PORT_PCR_MUX(3);

	// DMA channel #1 sets WS2811 high at the beginning of each cycle
	dma1.TCD->SADDR = &ones;
	dma1.TCD->SOFF = 0;
	dma1.TCD->ATTR = DMA_TCD_ATTR_SSIZE(0) | DMA_TCD_ATTR_DSIZE(0);
	dma1.TCD->NBYTES_MLNO = 1;
	dma1.TCD->SLAST = 0;
  switch(dataport)
  {
    case 'E':
      dma1.TCD->DADDR = &GPIOE_PSOR;
      break;
    default: // default == D
      dma1.TCD->DADDR = &GPIOD_PSOR;
      break;
  }
	dma1.TCD->DOFF = 0;
	dma1.TCD->CITER_ELINKNO = bufsize;
	dma1.TCD->DLASTSGA = 0;
	dma1.TCD->CSR = DMA_TCD_CSR_DREQ;
	dma1.TCD->BITER_ELINKNO = bufsize;

	// DMA channel #2 writes the pixel data at 20% of the cycle
	dma2.TCD->SADDR = frameBuffer;
	dma2.TCD->SOFF = 1;
	dma2.TCD->ATTR = DMA_TCD_ATTR_SSIZE(0) | DMA_TCD_ATTR_DSIZE(0);
	dma2.TCD->NBYTES_MLNO = 1;
	dma2.TCD->SLAST = -bufsize;
  switch(dataport)
  {
    case 'E':
      dma2.TCD->DADDR = &GPIOE_PDOR;
      break;
    default: // default == D
      dma2.TCD->DADDR = &GPIOD_PDOR;
      break;
  }
	dma2.TCD->DOFF = 0;
	dma2.TCD->CITER_ELINKNO = bufsize;
	dma2.TCD->DLASTSGA = 0;
	dma2.TCD->CSR = DMA_TCD_CSR_DREQ;
	dma2.TCD->BITER_ELINKNO = bufsize;

	// DMA channel #3 clear all the pins low at 48% of the cycle
	dma3.TCD->SADDR = &ones;
	dma3.TCD->SOFF = 0;
	dma3.TCD->ATTR = DMA_TCD_ATTR_SSIZE(0) | DMA_TCD_ATTR_DSIZE(0);
	dma3.TCD->NBYTES_MLNO = 1;
	dma3.TCD->SLAST = 0;
  switch(dataport)
  {
    case 'E':
      dma3.TCD->DADDR = &GPIOE_PCOR;
      break;
    default: // default == D
      dma3.TCD->DADDR = &GPIOD_PCOR;
      break;
  }
	dma3.TCD->DOFF = 0;
	dma3.TCD->CITER_ELINKNO = bufsize;
	dma3.TCD->DLASTSGA = 0;
	dma3.TCD->CSR = DMA_TCD_CSR_DREQ | DMA_TCD_CSR_INTMAJOR;
	dma3.TCD->BITER_ELINKNO = bufsize;

#ifdef __MK20DX256__
	MCM_CR = MCM_CR_SRAMLAP(1) | MCM_CR_SRAMUAP(0);
	AXBS_PRS0 = 0x1032;
#endif

	// route the edge detect interrupts to trigger the 3 channels
	dma1.triggerAtHardwareEvent(DMAMUX_SOURCE_FTM0_CH0);
	dma2.triggerAtHardwareEvent(DMAMUX_SOURCE_FTM0_CH1);
	dma3.triggerAtHardwareEvent(DMAMUX_SOURCE_FTM0_CH2);

	// enable a done interrupts when channel #3 completes
	dma3.attachInterrupt(isr);
	//pinMode(1, OUTPUT); // testing: oscilloscope trigger
}

void OctoWS2811::show(void)
{
	uint32_t sc;
	// wait for any prior DMA operation
	while (update_in_progress) ; 
	// it's ok to copy the drawing buffer to the frame buffer
	// during the 50us WS2811 reset time
	if (drawBuffer != frameBuffer) {
		// TODO: this could be faster with DMA, especially if the
		// buffers are 32 bit aligned... but does it matter?
		memcpy(frameBuffer, drawBuffer, stripLen * 24);
	}

	// ok to start, but we must be very careful to begin
	// without any prior 3 x 800kHz DMA requests pending
	sc = FTM0_SC;
	//digitalWriteFast(1, HIGH); // oscilloscope trigger
  
  //noInterrupts(); // This code is not time critical anymore. IRQ can stay on. 
  // We disable the FTM Timer, reset it to its initial counter value and clears all irq-flags. 
  // Clearing irqs is a bit tricky, because with DMA enabled, only the DMA can clear them. 
  // We have to disable DMA, reset the irq-flags and enable DMA once again.
	update_in_progress = 1;
  FTM0_SC = sc & 0xE7;	// stop FTM1 timer

  FTM0_CNT = 0; // writing any value to CNT-register will load the CNTIN value!
  
  FTM0_C0SC = 0; // disable DMA transfer. It has to be done, because we can't reset the CHnF bit while DMA is enabled
  FTM0_C1SC = 0;
  FTM0_C2SC = 0;
  
  FTM0_STATUS; // read status and write 0x00 to it, clears all IRQs
  FTM0_STATUS = 0x00;

  FTM0_C0SC = FTM_CSC_DMA | FTM_CSC_CHIE | 0x28; 
  FTM0_C1SC = FTM_CSC_DMA | FTM_CSC_CHIE | 0x28;
  FTM0_C2SC = FTM_CSC_DMA | FTM_CSC_CHIE | 0x28;

	dma1.enable();
	dma2.enable();		// enable all 3 DMA channels
	dma3.enable();
	//interrupts();
	//digitalWriteFast(1, LOW);
	// wait for WS2811 reset
	while (micros() - update_completed_at < 50) ;
	FTM0_SC = sc;		// restart FTM timer
}
